--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <div class="carousel-caption d-none d-md-block">
         <h2 class="fw-bolder">Laila Martinez</h2>
         <h3 class="fw-bold">Hello, I'm Laila a 14 year old teen from Chicago.</h3>
-        <p>this portfolio was created on April 9 2021</p>
+        <p>this portfolio was created on April 8, 2021 by me, Laila. </p>
       </div>
     </div>
     <div class="carousel-item" data-bs-interval="2000">
